# space

./: .gitignore  CMakeLists.txt  Makefile  README  compile_commands.json  physics.cpp  physics.hpp  space  space.cpp  test.cpp
common/: controls.cpp  controls.hpp  delta.cpp  delta.hpp  jsonreader.cpp  jsonreader.hpp  objloader.cpp  objloader.hpp  primitives.hpp
debugbuild/: CMakeCache.txt  Makefile  Space  cmake_install.cmake  resources
rendering/: renderer.cpp  renderer.hpp
rendering/utils/: shader.hpp  text2D.cpp  text2D.hpp  texture.hpp
resources/: fragshader.fs  untitled.mtl  vertexshader.vs
resources/textures/: concrete.DDS  grass-2.DDS  noto_sans_black_128.json
